--- a/.github/workflows/python_build.yml
+++ b/.github/workflows/python_build.yml
@@ -23,6 +23,7 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+  # random modification
         # Install project dependencies from requirements.txt
 
       - run: pytest -q
